# GraphArenaSWSN

./: .gitignore  EDA.ipynb  EDA_report.md  README.md  benchmark_GNN.py  benchmark_LLM_API.py  benchmark_LLM_local.py  benchmark_LLM_parallel.py  benchmark_LLM_sequential.py  build_dataset.py  graph_statistics_MIS_MVC.csv  pyproject.toml
reproduce/: reproduce_figure3_table4.ipynb  reproduce_figures_2_8.ipynb  reproduce_figures_4_9_10.ipynb  reproduce_figures_5_6_7.ipynb  reproduce_tables_1_2.ipynb
tasks/: Connected.py  Diameter.py  Distance.py  GED.py  MCP.py  MCS.py  MIS.py  MVC.py  Neighbor.py  TSP.py  __init__.py  base.py
utils/: build_dataset.sh  examples.md  run_GNN.sh  run_benchmark.sh  run_classic_solver.py
