[project]
name = "grapharenaswsn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fast-tsp>=0.1.4",
    "graph-walker>=1.0.6",
    "matplotlib>=3.10.7",
    "munkres>=1.1.4",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "ogb>=1.3.6",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pybind11>=3.0.1",
    "rdkit>=2025.9.1",
    "transformers>=4.57.1",
]
